# multiespectral_acquire

./: .gitignore  CMakeLists.txt  README.md  package.xml  plugin_description.xml
action/: MultiespectralAcquisition.action
conf/: lwir_params.yaml
launch/: camera_info.launch  gui.launch  multiespectral.launch  rviz.launch
multiespectral_acquire/: CMakeLists.txt  package.xml
multiespectral_acquire/cmake/: FindSpinnaker.cmake
multiespectral_acquire/conf/: lwir_params.yaml  visible_params.yaml
multiespectral_acquire/include/multiespectral_acquire/: logging_utils.h
multiespectral_acquire/launch/: multiespectral_launch.py
multiespectral_acquire/src/: multiespectral_fb_node_driver.cpp  multiespectral_fb_node_master.cpp  multiespectral_fb_node_slave.cpp
multiespectral_acquire/src/camera_drivers/: basler_a2a2600_adapter.cpp  basler_adapter.cpp  camera_adapter.cpp  camera_adapter.h  dummy_adapter.cpp  flir_adapter.cpp
multiespectral_acquire/srv/: ImageRequest.srv
multiespectral_acquire_gui/: package.xml  requirements.txt  setup.cfg  setup.py
multiespectral_acquire_gui/launch/: multiespectral_gui_launch.py
multiespectral_acquire_gui/multiespectral_acquire_gui/: FreqCounter.py  multiespectral_control.py  multiespectral_dummy_ac.py  multiespectral_ros_ac.py
multiespectral_acquire_gui/multiespectral_acquire_gui/templates/: index.html
python_gui/: FreqCounter.py  multiespectral_control.py  multiespectral_dummy_ac.py  multiespectral_ros_ac.py
python_gui/static/: manifest.appcache
python_gui/templates/: index.html
rviz_conf/: multiespectral_rviz.rviz
src/: basler_a2a2600_adapter.cpp  basler_adapter.cpp  camera_adapter.cpp  camera_adapter.h  camera_info_publisher.py  flir_adapter.cpp  multiespectral_fb_node_driver.cpp  multiespectral_fb_node_master.cpp  multiespectral_fb_node_slave.cpp  multiespectral_plugin.cpp  multiespectral_plugin.h  multiespectral_rviz_plugin.cpp
